# comic-rust

./: Cargo.toml  README.md  sample.env
src/: comicstructs.rs  getkey.rs  geturl.rs  main.rs
