[package]
name = "comic-rust-take-two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv-vault = "0.1.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.199"
serde_json = "1.0.116"
