[package]
name = "comic-rust-take-two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
dotenv-vault = "0.1.1"
ratatui = "0.26.2"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.199", features = ["derive"] }
